[gd_scene load_steps=9 format=4 uid="uid://dh6tr2cv4wbqq"]

[ext_resource type="Script" path="res://Scripts/Screens/win.gd" id="1_3ku0n"]
[ext_resource type="Theme" uid="uid://dchsfnmpldp4" path="res://Resources/Themes/Menu_Button_Bold.tres" id="2_gtwgl"]
[ext_resource type="PackedScene" uid="uid://dpemvr8ehylmu" path="res://Scenes/Interaction/Artifact.tscn" id="2_wfjts"]
[ext_resource type="Theme" uid="uid://2cwwdidf6lxu" path="res://Resources/Themes/Menu_Button.tres" id="3_44m3g"]
[ext_resource type="PackedScene" uid="uid://bgw6bnk7htssx" path="res://Scenes/Interaction/Cursor.tscn" id="3_glflk"]
[ext_resource type="TileSet" uid="uid://6vvuli8mgkii" path="res://Resources/Tiles/Ground.tres" id="6_1l4om"]
[ext_resource type="TileSet" uid="uid://dq2wv65dkypvo" path="res://Resources/Tiles/Obstacles.tres" id="7_cks34"]
[ext_resource type="PackedScene" uid="uid://b28skby5iojjb" path="res://Scenes/Interaction/Spike.tscn" id="8_ue7kv"]

[node name="Win" type="Node2D"]
script = ExtResource("1_3ku0n")

[node name="Text" type="Label" parent="."]
z_index = 1
offset_top = 151.0
offset_right = 385.0
offset_bottom = 174.0
scale = Vector2(5, 5)
theme = ExtResource("2_gtwgl")
text = "You have Escaped!"
horizontal_alignment = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
z_index = 1
offset_top = 780.0
offset_right = 960.0
offset_bottom = 820.0
scale = Vector2(2, 2)

[node name="Menu" type="Button" parent="AspectRatioContainer"]
layout_mode = 2
theme = ExtResource("3_44m3g")
action_mode = 0
text = "Main Menu
"

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="."]
z_index = 1
offset_top = 671.0
offset_right = 960.0
offset_bottom = 711.0
scale = Vector2(2, 2)

[node name="Respawn" type="Button" parent="AspectRatioContainer2"]
layout_mode = 2
theme = ExtResource("3_44m3g")
action_mode = 0
text = "New Run"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Score" type="Label" parent="."]
z_index = 1
offset_top = 369.0
offset_right = 640.0
offset_bottom = 392.0
scale = Vector2(3, 3)
theme = ExtResource("3_44m3g")
text = "Score: 0"
horizontal_alignment = 1

[node name="Score2" type="Label" parent="."]
z_index = 1
offset_top = 300.0
offset_right = 640.0
offset_bottom = 323.0
scale = Vector2(3, 3)
theme = ExtResource("3_44m3g")
text = "High Score: 0"
horizontal_alignment = 1

[node name="Artifact" parent="." instance=ExtResource("2_wfjts")]
position = Vector2(959, 380)
scale = Vector2(8, 8)

[node name="Cursor" parent="." instance=ExtResource("3_glflk")]

[node name="Ground" type="TileMapLayer" parent="."]
z_index = -1
position = Vector2(-192, 16)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAACAAYAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAAKAAYAAAAAAAAAAAALAAYAAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAA=")
tile_set = ExtResource("6_1l4om")
collision_visibility_mode = 1

[node name="Obstacles" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAD//wYAAAAAAAAAAAD//wUAAAAAAAAAAAD//wQAAAAAAAAAAAD//wMAAAAAAAAAAAD//wIAAAAAAAAAAAD//wEAAAAAAAAAAAD//wAAAAAAAAAAAAD/////AAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAAAAAgAAAAAAAAAAAABAAgAAAAAAAAAAAACAAgAAAAAAAAAAAADAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAAKAAgAAAAAAAAAAAALAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAANAAgAAAAAAAAAAAAOAAgAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAP//AAAAAAAAAAAOAP//AAAAAAAAAAANAP//AAAAAAAAAAAMAP//AAAAAAAAAAALAP//AAAAAAAAAAAAAAEAAAABAAAAAAAAAAIAAAABAAAAAAAAAAMAAAABAAAAAAAAAAQAAAABAAAAAAAAAAUAAAABAAAAAAAAAAYAAAABAAAAAAAAAAcAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAYAAAABAAAAABAOAAUAAAABAAAAABAOAAQAAAABAAAAABAOAAMAAAABAAAAABAOAAIAAAABAAAAABAOAAEAAAABAAAAABAOAAAAAAACAAAAABAAAAAAAAACAAAAAAABAAAAAAAAAAEAAAACAAAAAAAAAAEAAAADAAAAAAAAAAEAAAAEAAAAAAAAAAEAAAAFAAAAAAAAAAEAAAAGAAAAAAAAAAEAAAAHAAAAAAAAAAEAAAAIAAAAAAAAAAEAAAAJAAAAAAAAAAEAAAAKAAAAAAAAAAEAAAALAAAAAAAAAAEAAAAMAAAAAAAAAAEAAAANAAAAAAAAAAEAAAANAAcAAAAAAAAAAAAMAAcAAAAAAAAAAAALAAcAAAAAAAAAAAAKAAcAAAAAAAAAAAAJAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAADAAcAAAAAAAAAAAACAAcAAAAAAAAAAAABAAcAAAAAAAAAAAAGAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAMAAAABAAEAAAAIAAQAAAABAAAAAAAGAAQAAAABAAAAABAJAAUAAAACAAEAAAAFAAUAAAACAAEAABAEAAYAAAACAAEAABAKAAYAAAACAAEAAAA=")
tile_set = ExtResource("7_cks34")
navigation_enabled = false

[node name="Spike" parent="." instance=ExtResource("8_ue7kv")]
position = Vector2(768, 576)
rotation = -1.5708
scale = Vector2(4, 4)

[node name="Spike2" parent="." instance=ExtResource("8_ue7kv")]
position = Vector2(1152, 576)
rotation = -1.5708
scale = Vector2(4, 4)

[connection signal="pressed" from="AspectRatioContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="AspectRatioContainer2/Respawn" to="." method="_on_respawn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="Artifact" to="." method="_on_artifact_finished"]
